--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -58,7 +58,6 @@
             <li>Stand</li>
             <li>Neues (15 Punkt-Releases)</li>
             <li>Ausblick</li>
-            <li>Fazit</li>
           </ul>
         </section>
 
@@ -163,21 +162,182 @@
           <p>&nbsp;</p>
         </section>
 
+        <section
+          data-background-image="img/vector.png"
+          data-background-size="contain">
+          <p>&nbsp;</p>
+        </section>
+
+        <section
+          data-background-image="img/ol3-cesium.png"
+          data-background-size="contain">
+          <p>&nbsp;</p>
+        </section>
+
         <section>
           <h1>Neues</h1>
           <h2>15 Punkt-Releases später</h2>
         </section>
+
         <section>
-          <h2>OpenLayers</h2>
-        <p>https://github.com/openlayers/ol3/compare/master@%7B2015-03-11%7D...master@%7B2016-07-15%7D</p>
-      </section>
+          <h2>11.03.2015 - 05.07.2016</h2>
+          <h2>v3.3.0 - v3.17.0</h2>
+          <hr />
+          <h3>14 Punkt-Releases</h3>
+        </section>
+
+        <section>
+          <img src="img/github-changes.png" class="stretch plain" />
+          <ul>
+            <li>&gt; 3.000 commits</li>
+            <li>&gt; 1.000 Dateiänderungen</li>
+            <li>22 Beitragende (code)</li>
+          </ul>
+        </section>
+
+        <section>
+          <img src="img/github-top-contributors.png" class="stretch plain" />
+          <ul>
+            <li>Top-6 Beitragende</li>
+            <li>5 verschiedene Firmen &amp; ein Bot</li>
+            <li>5 verschiedene Nationalitäten</li>
+            <li>Hohe Kontinuität</li>
+          </ul>
+        </section>
+
+        <section>
+          <h1>Wichtige Änderungen / neue Features</h1>
+          <h4>… eine Auswahl</h4>
+        </section>
+
+        <section>
+          <h2>v3.4.0</h2>
+          <ul>
+            <li>Dateline wrapping tile-sources <img src="img/dateline.png" class="plain" /></li>
+            <li>Circles in Draw interaction <img src="img/circle.png" class="plain" /></li>
+          </ul>
+        </section>
+
+        <section>
+          <h2>v3.4.0 &mdash; v3.10.0</h2>
+          <ul>
+            <li>Einige experimentelle Features entfernt (two-way-binding, FeatureOverlay…)</li>
+            <li>Spezifische Vektor sources entfernt; => <code>format</code> in Vector-source</li>
+            <li>Translate Interaktion</li>
+            <li>IE 9 mit ES5-Shims, Edge-Support</li>
+            <li>Zahlreiche Bugfixes</li>
+            <li>Performanceverbesserungen</li>
+            <li>Bessere Dokumentation</li>
+            <li>…</li>
+          </ul>
+        </section>
+
+        <section>
+          <section>
+            <h2>v3.11.0</h2>
+            <ul>
+              <li>Clientseitige Rasterreprojektion <img src="img/reprojection.png" class="plain" /></li>
+            </ul>
+          </section>
+          <section>
+            <img src="img/2009.jpg" class="stretch plain" />
+            <p>Sydney, Australien, Oktober 2009</p>
+          </section>
+          <section>
+            <div class="stretch">
+              <iframe width="100%" height="100%" src="http://openlayers.org/en/latest/examples/reprojection-by-code.html"></iframe>
+            </div>
+          </section>
+          <section>
+            <h2>v3.11.0</h2>
+            <ul>
+              <li>Mapbox Vector Tiles <img src="img/mvt.png" class="plain" /></li>
+            </ul>
+          </section>
+          <section>
+            <div class="stretch">
+              <iframe width="100%" height="100%" src="http://openlayers.org/en/latest/examples/mapbox-vector-tiles-advanced.html"></iframe>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <section>
+            <h2>Außerdem neu:</h2>
+            <ul>
+              <li>ol.source.CartoDB</li>
+              <li>ol.source.ImageArcGISRest</li>
+              <li>Multiline Labels (Vektoren)</li>
+              <li>ol.source.Raster</li>
+            </ul>
+          </section>
+          <section>
+            <div class="stretch">
+              <iframe width="100%" height="100%" src="http://openlayers.org/en/latest/examples/raster.html"></iframe>
+            </div>
+          </section>
+        </section>
+
+        <section>
+          <h2 colspan="2">Weiche Übergänge bei URL-Änderungen</h2>
+          <table>
+            <tr>
+              <td style="vertical-align:top">
+                <img src="img/url-change-before.gif" class="plain" />
+              </td>
+              <td>
+                <img src="img/url-change-after.gif" class="plain" />
+              </td>
+            </tr>
+          </table>
+        </section>
+
+        <section>
+          <h2>…gerne Vergessen</h2>
+          <ul>
+            <li>…zahlreiche Usability- und Dokumentationsverbesserungen</li>
+            <li>Kreuzverlinkung</li>
+            <li>Verlinkung API</li>
+            <li>Kennzeichnung älterer Beispiele / API</li>
+          </ul>
+        </section>
+
+        <section>
+          <table class="stretch">
+            <tr>
+              <th>v3.3.0</th>
+              <th>v3.16.0</th>
+            </tr>
+            <tr>
+              <td style="vertical-align:top">
+                <img src="img/simple-3.3.0.png" class="plain" />
+              </td>
+              <td>
+                <img src="img/simple-3.16.0.png" class="plain" />
+              </td>
+            </tr>
+          </table>
+        </section>
+
         <section>
           <h1>Ausblick</h1>
           <h2>… was kommt als nächstes?</h2>
         </section>
 
         <section>
-          <h1>Fazit</h1>
+          <h2>Zukunftsmusik</h2>
+          <ul>
+            <li>Abhängigkeit von closure-library entfernen</li>
+            <li>ECMAScript 2015 Module</li>
+            <li>Mehr WebGL (Linien und Flächen), <a href="https://github.com/openlayers/ol3/pull/5462">#5462</a><img src="img/webgl.png" class="plain" /></li>
+            <li>…</li>
+          </ul>
+        </section>
+
+        <section
+          data-background-image="img/builder.png"
+          data-background-size="contain">
+          <p>&nbsp;</p>
         </section>
 
         <section id="thanks-questions">
