--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -371,8 +371,9 @@
             veröffentlicht.
           </p>
           <p>
-            <a href="http://marcjansen.github.io/fossgis2016/openlayers-talk/index.html">Vortragsfolien</a>,
-            <a href="http://marcjansen.github.io/fossgis2016/openlayers-talk/slides.pdf">PDF-Version</a>,
+            <!-- Use http, so that no mixed content warning due to embeded openlayers examples -->
+            <a href="http://rawgit.com/marcjansen/fossgis2016/master/openlayers-talk/index.html">Vortragsfolien</a>,
+            <a href="https://rawgit.com/marcjansen/fossgis2016/master/openlayers-talk/OpenLayers-3-Stand-Neues-und-Ausblick.pdf">PDF-Version</a>,
             <a href="https://github.com/marcjansen/fossgis2016">git repository</a>
           </p>
         </section>
