--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -219,6 +219,22 @@
         </section>
 
         <section>
+          <h3>Schladming, März 2015</h3>
+          <img src="img/ol3-schladming-group.jpg" class=" plain" />
+        </section>
+
+        <section>
+          <h2>Schladming, März 2015</h2>
+          <ul>
+           <li>Tutorials / FAQ</li>
+           <li>API docs</li>
+           <li>Assertions mit Fehlermeldungen</li>
+           <li>Testcoverage</li>
+           <li>…</li>
+          </ul>
+        </section>
+
+        <section>
           <h2>v3.4.0 &mdash; v3.10.0</h2>
           <ul>
             <li>Einige experimentelle Features entfernt (two-way-binding, FeatureOverlay…)</li>
@@ -233,6 +249,10 @@
         </section>
 
         <section>
+          <section>
+            <h2>v3.11.0</h2>
+            <img src="img/win311logo.png" class="fragment plain" />
+          </section>
           <section>
             <h2>v3.11.0</h2>
             <ul>
@@ -263,13 +283,18 @@
 
         <section>
           <section>
-            <h2>Außerdem neu:</h2>
+            <h2>&gt; v3.11.0: neu</h2>
             <ul>
               <li>ol.source.CartoDB</li>
               <li>ol.source.ImageArcGISRest</li>
               <li>Multiline Labels (Vektoren)</li>
               <li>ol.source.Raster</li>
             </ul>
+          </section>
+          <section>
+            <div class="stretch">
+              <iframe width="100%" height="100%" src="http://openlayers.org/en/latest/examples/color-manipulation.html"></iframe>
+            </div>
           </section>
           <section>
             <div class="stretch">
