--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -140,7 +140,7 @@
             <li>…lange Historie<ul>
               <li>v2.0.0, August 2006</li>
               <li>v3.0.0, August 2014</li>
-              <li>v3.16.0, Mai 2016</li>
+              <li>v3.17.0, Juli 2016</li>
             </ul></li>
             <li>viele Daten- &amp; Layerquellen</li>
             <li>Interaktionen &amp; Steuerelemente</li>
@@ -220,7 +220,7 @@
 
         <section>
           <h3>Schladming, März 2015</h3>
-          <img src="img/ol3-schladming-group.jpg" class=" plain" />
+          <img src="img/ol3-schladming-group.jpg" class="plain" />
         </section>
 
         <section>
