--- a/openlayers-talk/index.html
+++ b/openlayers-talk/index.html
@@ -285,9 +285,10 @@
           <section>
             <h2>&gt; v3.11.0: neu</h2>
             <ul>
+              <li>Multiline Labels (Vektoren)</li>
               <li>ol.source.CartoDB</li>
               <li>ol.source.ImageArcGISRest</li>
-              <li>Multiline Labels (Vektoren)</li>
+              <li><del>ol.source.MapQuest</del></li>
               <li>ol.source.Raster</li>
             </ul>
           </section>
